# Core3DEngine

./: CMakeLists.txt
GL/: GraphicsGL.cpp  ShaderGL.cpp  ShaderManagerGL.cpp
common/: types.h
example/: CMakeLists.txt  main.cpp
geometry/: GeometryUtils.cpp
image/: ImagePainter.cpp
material/: BasicLitMaterial.cpp  BasicLitMaterial.h  ShaderManager.cpp
math/: Quaternion.cpp
particles/: ParticleEmitter.h  ParticleSystem.cpp
particles/renderer/: ParticleSystemPointRenderer.cpp
render/: Camera.cpp  CubeFace.h  MeshOutlinePostProcessor.cpp  MeshRenderer.cpp  RenderTarget.cpp  Renderer.cpp  Renderer.h
scene/: Object3D.cpp
util/: Tree.h
